Cibyl (13)
	* The framework for registering callbacks (such as the Java
	Canvas.keyPressed) has been generalized and moved to the ansi
	syscall set and the CRunTime.java file. Support for atexit has
	been implemented through this improvement

	* Fixed minor bug on register cleanup (static registers should not
	be cleaned up)

	* Some minor code refactoring of GameScreenCanvas.java

	* Define NOPH_Exception_new_string to take printf-style arguments

	* Workaround a bug on SE phones - InputStream's from
	FileConnections return the wrong value on "skip", so we no longer
	validate the return value in the ::seek method.

	-- Simon Kagstrom <simon.kagstrom@gmail.com>

Cibyl (12)
	* Fixed a bug with the --optimize-indirect-calls option, which
	could cause a python exception with relocation entries in pruned
	functions (thanks Ehud)

	* Fixed bug where Cibyl generated broken code if the RA register
	was assigned to/read within a method (thanks Ehud). Also added a
	test case to check for this.

	* Cibyl now produce .class files directly, and the
	--only-translate option has been added to avoid the compile step

	* Fixed bug where the label lookup was done too early, meaning
	that the memory register optimization could produce broken code.

	* Minor optimizations to some instructions (some from NestedVM)

	* The peephole optimizer is now automatically called if -O is
	specified

	* Display an error dialogue if the device cannot allocate enough
	memory or throws some other exception (Ehud)

	* Avoid copying data memory more than once (Ehud)

	* libc has been extended with some gmtime, vsnprintf and various
	other functionality (Ehud)

	* Link all .rodata.* sections to .rodata. This again avoids some
	C++ problems.

	* Use pushsection for .cibylstrtab. This avoids a C++ bug where,
	due to using other sections than .text for some code, the assembly
	part would break with "Error: operation combines symbols in
	different segments".
